--- a/src/assets/css/azia.css
+++ b/src/assets/css/azia.css
@@ -85,6 +85,8 @@
 *      9.7  Position
 *      9.8  Typography
 *      9.9  Width
+*   10. CUSTOM CSS
+*     
 *
 */
 /* ############### FONTS IMPORT ############### */
@@ -166,9 +168,12 @@ hr {
   height: 0;
   overflow: visible; }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5,{
   margin-top: 0;
   margin-bottom: 0.5rem; }
+
+.lighter {
+  color: #9d9999 }
 
 p {
   margin-top: 0;
@@ -13383,7 +13388,8 @@ textarea.parsley-success:focus {
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #ced4da;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  margin-top: 55px; }
   .az-dashboard-nav .nav-link {
     font-size: 12px;
     padding: 5px 10px 8px;
@@ -13395,7 +13401,7 @@ textarea.parsley-success:focus {
         font-size: 0.8125rem; } }
     @media (min-width: 992px) {
       .az-dashboard-nav .nav-link {
-        padding: 5px 15px 10px; } }
+        padding: 5px 15px 0px; } }
     .az-dashboard-nav .nav-link:hover, .az-dashboard-nav .nav-link:focus {
       color: #6610f2; }
     .az-dashboard-nav .nav-link + .nav-link {
@@ -41812,3 +41818,37 @@ textarea.parsley-success:focus {
 
 .wd-100v {
   width: 100vw; }
+
+
+  /* ###### 10 Custom   ###### */
+
+  .header-shadow {
+    box-shadow: 0 0 30px rgba(28, 39, 60, 0.08);
+    border-bottom: 1px solid rgba(28, 39, 60, 0.12)
+  }
+
+  .footer-shadow {
+    box-shadow: 0 0 30px rgba(28, 39, 60, 0.08);
+    border-top: 1px solid rgba(28, 39, 60, 0.12)
+  }
+
+  .no-buttom-margin {
+    margin-block-end: 0
+  }
+
+  .top-margin {
+    margin-block-start: 2.61rem
+  }
+
+  .thriftBoxColor {
+    background-color: #5a24e8;
+  }
+
+  .thriftBoxColor:hover {
+    background-color: black;
+  }
+
+  .activeHeader {
+    border-bottom: 1px solid #5a24e8
+  }
+  
