--- a/src/assets/css/azia.css
+++ b/src/assets/css/azia.css
@@ -13389,7 +13389,7 @@ textarea.parsley-success:focus {
   justify-content: space-between;
   border-bottom: 1px solid #ced4da;
   margin-bottom: 20px;
-  margin-top: 55px; }
+  margin-top: 120px; }
   .az-dashboard-nav .nav-link {
     font-size: 12px;
     padding: 5px 10px 8px;
@@ -13426,8 +13426,8 @@ textarea.parsley-success:focus {
     @media (min-width: 768px) {
       .az-dashboard-nav .nav:last-child .nav-link {
         display: block; } }
-    .az-dashboard-nav .nav:last-child .nav-link:hover, .az-dashboard-nav .nav:last-child .nav-link:focus {
-      color: #6610f2; }
+    /* .az-dashboard-nav .nav:last-child .nav-link:hover, .az-dashboard-nav .nav:last-child .nav-link:focus {
+      color: #6610f2; } */
     .az-dashboard-nav .nav:last-child .nav-link i {
       font-size: 16px;
       margin-right: 7px;
