Implement admin accounting dash
- Add design to post new account entry
- Add design to view account entries
- Add design to view fs
- Add design to create new account

--- a/src/assets/css/azia.css
+++ b/src/assets/css/azia.css
@@ -41851,4 +41851,17 @@ textarea.parsley-success:focus {
   .activeHeader {
     border-bottom: 1px solid #5a24e8
   }
+
+  .addButton {
+    height: 17px;
+    width: 17px;
+    cursor: pointer;
+  }
+
+  .removeButton {
+    height: 19px;
+    width: 19px;
+    cursor: pointer;
+  }
+
   
