--- a/src/assets/css/azia.css
+++ b/src/assets/css/azia.css
@@ -41887,5 +41887,46 @@ textarea.parsley-success:focus {
   .greyButton:hover {
     background-color: #BDBDBD
   }
-  
-  
+
+  /* Autocomplete */
+
+  input {
+    /* border: 1px solid #999;
+    padding: 0.5rem; */
+    width: 100%;
+    line-height: 1.5;
+    border: 1px solid #ced4da;
+    height: 38px;
+  }
+
+.no-suggestions {
+  color: #999;
+  padding: 0.5rem;
+}
+
+.suggestions {
+  border: 1px solid #999;
+  border-top-width: 0;
+  list-style: none;
+  margin-top: 0;
+  max-height: 143px;
+  overflow-y: auto;
+  padding-left: 0;
+  /* width: calc(300px + 1rem); */
+}
+
+.suggestions li {
+  padding: 0.5rem;
+}
+
+.suggestion-active,
+.suggestions li:hover {
+  background-color: #000000;
+  color: #ffffff;
+  cursor: pointer;
+  font-weight: 700;
+}
+
+.suggestions li:not(:last-of-type) {
+  border-bottom: 1px solid #999;
+}
